--- a/corpNavig/manifest.json
+++ b/corpNavig/manifest.json
@@ -44,6 +44,13 @@
 				}
 			}
 		},
+		"models": {
+			"login": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/login.json"
+			}
+		},
+
 		"contentDensities": {
 			"compact": true,
 			"cozy": true
